--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="StarForce"
+      content="Full Stack React/Java Spring Boot on Heroku Demo for Dreamforce 2019"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="apple-touch-icon" href="heroku-logo-stroke-purple.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>StarForce - A "Modern Full Stack Application" running on Heroku</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
